responsiveness added all pages, headers and main content

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>Contact</title>
+    <title>responsive contact</title>
 
     <!-- Get rid of those yucky styles coming from who knows where -->
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
@@ -13,7 +13,7 @@
 
   </head>
 
-  <body style="background: url(./assets/images/mosaic.png)">
+  <body>
 
     <header id="basic-portfolio-header">
       <nav id="basic-portfolio-header-nav">
@@ -26,7 +26,7 @@
             <li><a class="nav-bar-link" href="./index.html">About</a></li>
             <li><a class="nav-bar-link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-bar-link" href="./contact.html">Contact</a></li>
-            <li><a class="nav-bar-link" target="_blank" href="https://www.linkedin.com/in/janjakubowski"><img src="./assets/images/linkedin.png" alt="LinkedIn"></a></li>
+            <!-- <li><a class="nav-bar-link" target="_blank" href="https://www.linkedin.com/in/janjakubowski"><img src="./assets/images/linkedin.png" alt="LinkedIn"></a></li> -->
           </ul>
     
       </nav> 
@@ -38,8 +38,6 @@
       <div class="page-title">
         <h1>Contact</h1>
       </div>
-      <hr>
-    
 
       <!-- form to collect name, email addr and any comments -->
       <form id="request-contact-form" action="#">
