--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Jan Jakubowski Homework</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>responsive about me</title>
 
     <!-- Get rid of those yucky styles coming from who knows where -->
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
@@ -12,7 +14,7 @@
 
   </head>
 
-  <body style="background: url(./assets/images/mosaic.png)"> 
+  <body> 
 
     <header id="basic-portfolio-header">
       <nav id="basic-portfolio-header-nav">
@@ -25,7 +27,7 @@
           <li><a class="nav-bar-link" href="./index.html">About</a></li>
           <li><a class="nav-bar-link" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav-bar-link" href="./contact.html">Contact</a></li>
-          <li><a class="nav-bar-link" target="_blank" href="https://www.linkedin.com/in/janjakubowski"><img src="./assets/images/linkedin.png" alt="LinkedIn"></a></li>
+          <!-- <li><a class="nav-bar-link" target="_blank" href="https://www.linkedin.com/in/janjakubowski"><img src="./assets/images/linkedin.png" alt="LinkedIn"></a></li> -->
         </ul>
 
       </nav> 
@@ -36,7 +38,6 @@
       <div class="page-title">
         <h1>About Me</h1>
       </div>
-      <hr>
 
       <article id="about-me">
 
