--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>portfolio</title>
+    <title>responsive portfolio</title>
 
     <!-- Get rid of those yucky styles coming from who knows where -->
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
@@ -13,7 +13,7 @@
     
   </head>
 
-  <body style="background: url(./assets/images/mosaic.png)">
+  <body>
 
     <header id="basic-portfolio-header">
       <nav id="basic-portfolio-header-nav">
@@ -26,7 +26,7 @@
             <li><a class="nav-bar-link" href="./index.html">About</a></li>
             <li><a class="nav-bar-link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-bar-link" href="./contact.html">Contact</a></li>
-            <li><a class="nav-bar-link" target="_blank" href="https://www.linkedin.com/in/janjakubowski"><img src="./assets/images/linkedin.png" alt="LinkedIn"></a></li>
+            <!-- <li><a class="nav-bar-link" target="_blank" href="https://www.linkedin.com/in/janjakubowski"><img src="./assets/images/linkedin.png" alt="LinkedIn"></a></li> -->
           </ul>
 
       </nav>
@@ -36,8 +36,7 @@
 
       <div class="page-title">
         <h1>Portfolio</h1>
-      </div>
-      <hr>    
+      </div>  
 
       <container id="portfolio-container">
 
