--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
   <head>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>responsive contact</title>
 
     <!-- Get rid of those yucky styles coming from who knows where -->
